--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -78,17 +78,7 @@
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                         </li>
-                        
-                        @*<li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Upcoming Camps
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                       
-                                    @Html.ActionLink("Casa Camp 2018", "Latest", "Camp", null, new {@class = "dropdown-item"})
-
-                            </div>
-                        </li>*@
+               
                        @if ( camps.Any())
                         {
                             <li class="nav-item dropdown">
@@ -106,7 +96,7 @@
                             </li>
                       
                             <li class="nav-item">
-                                @Html.ActionLink("Reserve My Spot", "Index", "Booking", null, new {@class = "nav-link"})
+                                @Html.ActionLink("Reserve My Spot", "Index", "Booking", new { id = camps.First().CampId }, new {@class = "nav-link"})
                             </li>
                         }
                        
