--- a/BJJInParadise.Web/Views/Account/ForgotPassword.cshtml
+++ b/BJJInParadise.Web/Views/Account/ForgotPassword.cshtml
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="offset-md-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Email Link" />
         </div>
     </div>
