--- a/BJJInParadise.Web/Views/Account/VerifyCode.cshtml
+++ b/BJJInParadise.Web/Views/Account/VerifyCode.cshtml
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="offset-md-2 col-md-10">
             <div class="checkbox">
                 @Html.CheckBoxFor(m => m.RememberBrowser)
                 @Html.LabelFor(m => m.RememberBrowser)
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="offset-md-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Submit" />
         </div>
     </div>
