--- a/BJJInParadise.Web/Views/Camp/Edit.cshtml
+++ b/BJJInParadise.Web/Views/Camp/Edit.cshtml
@@ -59,7 +59,7 @@
 
 
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
+                <div class="offset-md-2 col-md-10">
                     <input type="submit" value="Save" class="btn btn-default" />
                 </div>
             </div>
