--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <!-- Custom styles for this template -->
     <link href="~/Content/agency/agency.min.css" rel="stylesheet">
     <link href="~/Content/Site.css" rel="stylesheet">
+    <link rel="icon" href="@Url.Content("~/favicon.ico")" />
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -27,7 +28,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -179,7 +180,8 @@
     <!-- Contact form JavaScript -->
     <script src="~/Scripts/agency/jqBootstrapValidation.min.js"></script>
     <script src="~/Scripts/agency/contact_me.min.js"></script>
-     <script>
+    <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+<script>
 
 
     var name = "@ViewContext.Controller.ValueProvider.GetValue("controller").RawValue.ToString()"
